--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -3,10 +3,10 @@ name: Java 17 CI/CD with Docker (Versioned Tags)
 on:
   push:
     branches:
-      - dev
+      - main
   pull_request:
     branches:
-      - dev
+      - main
 
 jobs:
   build:
@@ -22,11 +22,6 @@ jobs:
           distribution: 'temurin'  # Bisa juga 'adopt', 'zulu', dll.
           java-version: '17'
 
-      - name: Build project with Maven
-        run: mvn clean package
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
       - name: Extract Version from pom.xml
         id: extract_version
         run: echo "VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)" >> $GITHUB_ENV
@@ -37,9 +32,8 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build and Push Docker Image
+      - name: Pull, latest tag and Push Docker Image
         run: |
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/api-cdt-gateway-service:${{ env.VERSION }} .
-          docker tag ${{ secrets.DOCKER_USERNAME }}/api-cdt-gateway-service:${{ env.VERSION }} ${{ secrets.DOCKER_USERNAME }}/api-cdt-gateway-service:dev
-          docker push ${{ secrets.DOCKER_USERNAME }}/api-cdt-gateway-service:${{ env.VERSION }}
-          docker push ${{ secrets.DOCKER_USERNAME }}/api-cdt-gateway-service:dev
+          docker pull ${{ secrets.DOCKER_USERNAME }}/api-cdt-gateway-service:${{ env.VERSION }} 
+          docker tag ${{ secrets.DOCKER_USERNAME }}/api-cdt-gateway-service:${{ env.VERSION }} ${{ secrets.DOCKER_USERNAME }}/api-cdt-gateway-service:latest
+          docker push ${{ secrets.DOCKER_USERNAME }}/api-cdt-gateway-service:latest
